--- a/index.html
+++ b/index.html
@@ -245,9 +245,10 @@
     .twitch { background: linear-gradient(45deg, #6441a5, #7d5bbe); }
     .x { background: linear-gradient(45deg, #000000, #1a1a1a); }
     .threads { background: linear-gradient(45deg, #000000, #1a1a1a); }
-    .tiktok { background: linear-gradient(45deg, #000000, #25f4ee, #fe2c55); }
+    .tiktok { background: linear-gradient(45deg, #000000, #fe2c55, #25f4ee); }
     .youtube { background: linear-gradient(45deg, #ff0000, #cc0000); }
     .pinterest { background: linear-gradient(45deg, #bd081c, #e60023); }
+    .github { background: linear-gradient(45deg, #333333, #24292e); }
     
     /* تصميم متجاوب */
     @media (max-width: 600px) {
@@ -295,21 +296,6 @@
     <h1>علي كامل | Ali Kamil</h1>
     <p class="subtitle">Digital Creator & Social Media Influencer</p>
     
-    <div class="stats">
-      <div class="stat-item">
-        <div class="stat-value">50K+</div>
-        <div class="stat-label">Followers</div>
-      </div>
-      <div class="stat-item">
-        <div class="stat-value">12</div>
-        <div class="stat-label">Platforms</div>
-      </div>
-      <div class="stat-item">
-        <div class="stat-value">5+</div>
-        <div class="stat-label">Years</div>
-      </div>
-    </div>
-
     <section class="links">
       <a class="btn instagram" href="https://www.instagram.com/lo_oxll?igsh=MWx0dmxpbTU3bXlyNQ%3D%3D&utm_source=qr" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
       <a class="btn facebook"  href="https://www.facebook.com/profile.php?id=100010347520733" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
@@ -317,8 +303,9 @@
       <a class="btn telegram"  href="https://t.me/lo_oxll" target="_blank"><i class="fab fa-telegram-plane"></i> Telegram</a>
       <a class="btn discord"   href="https://discord.com/users/994903778153201676" target="_blank"><i class="fab fa-discord"></i> Discord</a>
       <a class="btn twitch"    href="https://twitch.tv/lo_oxll" target="_blank"><i class="fab fa-twitch"></i> Twitch</a>
+      <a class="btn threads"   href="https://www.threads.net/@lo_oxll" target="_blank"><i class="fa-brands fa-threads"></i> Threads</a>
       <a class="btn x"         href="https://x.com/lo_oxll" target="_blank"><i class="fab fa-x-twitter"></i> X (Twitter)</a>
-      <a class="btn threads"   href="https://www.threads.net/@lo_oxll" target="_blank"><i class="fab fa-threads"></i> Threads</a>
+      <a class="btn github"    href="https://github.com/lo-oxll" target="_blank"><i class="fab fa-github"></i> GitHub</a>
       <a class="btn tiktok"    href="https://www.tiktok.com/@lo_oxll?_t=ZS-8yy7IrSGCY9&_r=1" target="_blank"><i class="fab fa-tiktok"></i> TikTok</a>
       <a class="btn youtube"   href="https://youtube.com/@lo_oxll?si=wrcpKba1MRvAAdqz" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
       <a class="btn pinterest" href="https://www.pinterest.com/lo_oxll" target="_blank"><i class="fab fa-pinterest-p"></i> Pinterest</a>
