--- a/index.html
+++ b/index.html
@@ -297,18 +297,18 @@
     <p class="subtitle">Digital Creator & Social Media Influencer</p>
     
     <section class="links">
-      <a class="btn instagram" href="https://www.instagram.com/lo_oxll?igsh=MWx0dmxpbTU3bXlyNQ%3D%3D&utm_source=qr" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
-      <a class="btn facebook"  href="https://www.facebook.com/profile.php?id=100010347520733" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
-      <a class="btn linkedin"  href="https://www.linkedin.com/in/alikamilyaseen?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
-      <a class="btn telegram"  href="https://t.me/lo_oxll" target="_blank"><i class="fab fa-telegram-plane"></i> Telegram</a>
-      <a class="btn discord"   href="https://discord.com/users/994903778153201676" target="_blank"><i class="fab fa-discord"></i> Discord</a>
-      <a class="btn twitch"    href="https://twitch.tv/lo_oxll" target="_blank"><i class="fab fa-twitch"></i> Twitch</a>
+      <a class="btn instagram" href="https://www.instagram.com/lo_oxll?igsh=MWx0dmxpbTU3bXlyNQ%3D%3D&utm_source=qr" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
+      <a class="btn facebook"  href="https://www.facebook.com/profile.php?id=100010347520733" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
+      <a class="btn linkedin"  href="https://www.linkedin.com/in/alikamilyaseen?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><i class="fa-brands fa-linkedin-in"></i> LinkedIn</a>
+      <a class="btn telegram"  href="https://t.me/lo_oxll" target="_blank"><i class="fa-brands fa-telegram"></i> Telegram</a>
+      <a class="btn discord"   href="https://discord.com/users/994903778153201676" target="_blank"><i class="fa-brands fa-discord"></i> Discord</a>
+      <a class="btn twitch"    href="https://twitch.tv/lo_oxll" target="_blank"><i class="fa-brands fa-twitch"></i> Twitch</a>
       <a class="btn threads"   href="https://www.threads.net/@lo_oxll" target="_blank"><i class="fa-brands fa-threads"></i> Threads</a>
-      <a class="btn x"         href="https://x.com/lo_oxll" target="_blank"><i class="fab fa-x-twitter"></i> X (Twitter)</a>
-      <a class="btn github"    href="https://github.com/lo-oxll" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-      <a class="btn tiktok"    href="https://www.tiktok.com/@lo_oxll?_t=ZS-8yy7IrSGCY9&_r=1" target="_blank"><i class="fab fa-tiktok"></i> TikTok</a>
-      <a class="btn youtube"   href="https://youtube.com/@lo_oxll?si=wrcpKba1MRvAAdqz" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
-      <a class="btn pinterest" href="https://www.pinterest.com/lo_oxll" target="_blank"><i class="fab fa-pinterest-p"></i> Pinterest</a>
+      <a class="btn x"         href="https://x.com/lo_oxll" target="_blank"><i class="fa-brands fa-square-x-twitter"></i> X</a>
+      <a class="btn github"    href="https://github.com/lo-oxll" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a>
+      <a class="btn tiktok"    href="https://www.tiktok.com/@lo_oxll?_t=ZS-8yy7IrSGCY9&_r=1" target="_blank"><i class="fa-brands fa-tiktok"></i> TikTok</a>
+      <a class="btn youtube"   href="https://youtube.com/@lo_oxll?si=wrcpKba1MRvAAdqz" target="_blank"><i class="fa-brands fa-youtube"></i> YouTube</a>
+      <a class="btn pinterest" href="https://www.pinterest.com/lo_oxll" target="_blank"><i class="fa-brands fa-pinterest"></i> Pinterest</a>
     </section>
     
     <div class="footer">
